# multimax-ai-hub

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  MIGRATION_STATUS.md  Makefile  PHASE0_IMPLEMENTATION_PLAN.md  README.md  phase1.md  phase10.md  phase11.md  phase12.md  phase13.md  phase14.md  phase15.md  phase2.md  phase3.md  phase4.md  phase5.md  phase7.md  phase8.md  phase9.md  pyproject.toml  pytest.ini
.azure/architecture/: ARCHITECTURE_REVIEW.md  SOFTWARE_ARCHITECTURE_DOCUMENT.md
.azure/architecture/adr/: ADR-001-record-architecture-decisions.md  ADR-002-domain-modules.md  ADR-003-ai-provider-abstraction.md  ADR-004-event-driven-communication.md  ADR-005-zero-budget-stack.md  README.md
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  main.py  requirements.txt  test_chat.py  test_chat_imports.py  test_direct.py  test_flow.py  test_integration.py  verify_chat_tables.py  verify_complete.py  verify_imports.py
backend/app/: MIGRATION_CHECKLIST.md  __init__.py  main.py  verify_phase0.py
backend/app/ai/: base.py  exceptions.py  manager.py  provider_registry.py  schemas.py  verify_ai.py
backend/app/auth/: __init__.py  api.py  dependencies.py  models.py  schemas.py  service.py
backend/app/chat/: __init__.py  api.py  exceptions.py  models.py  repositories.py  schemas.py  service.py
backend/app/core/: __init__.py  config.py  container.py  database.py  events.py  exceptions.py  (+3 more)
backend/data/: multimax.db
backend/legacy/: README.md  main.py
backend/migrations/: alembic.ini  env.py
backend/services/: __init__.py  embedding_service.py  storage_service.py
backend/tests/: test_health_endpoints.py
data/: multimax.db
docker/: Dockerfile.backend  docker-compose.yml
docker/nginx/: default.conf
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: audit_imports.py  audit_results.json
(+64 files in other folders)
